added unit test and integration test and fixed more bugs