@@ -32,8 +32,6 @@ dependencies {
     implementation 'com.github.ben-manes.caffeine:caffeine'
 
     // Database
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-database-postgresql'
     runtimeOnly 'org.postgresql:postgresql'
 
     // JSON
@@ -68,11 +66,6 @@ springBoot {
     buildInfo()
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-    finalizedBy tasks.jacocoTestReport
-}
-
 tasks.jacocoTestReport {
     dependsOn tasks.test
     reports {
@@ -90,4 +83,10 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+    finalizedBy tasks.jacocoTestReport
 }
